--- a/version.html
+++ b/version.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>New branch created feature</h1>
-    <h2>updated file in new branch</h2>
+    <h1>version branch created</h1>
 </body>
 </html>
